Updated HTML structure and fixed layout issues

--- a/screen.css
+++ b/screen.css
@@ -7,6 +7,13 @@ body {
     margin: 0;
 }
 
+main {
+    margin: 0 auto;
+    width: 100%;
+    max-width: fit-content;
+    height: auto;
+}
+
 img {
     width: 100%;
 }
